This file documents the major additions and syntax changes between releases.

2.3 [...]
	FIXES
	Fix regression where check_dhcp was rereading response in a tight loop

2.2 29th November 2016
	ENHANCEMENTS
	The check_http -S/--ssl option now accepts the arguments "1.1" and "1.2"
	  to force TLSv1.1 and TLSv1.2 connections, respectively
	The check_http -S/--ssl option now allows for specifying the desired
	  protocol with a "+" suffix to also accept newer versions
	Let check_http check HTTPS web sites via proxies
	check_http: add timeout to performance data as max value
	check_http: report certificate expiry date in UTC
	check_snmp: add IPv6 support
	check_snmp's performance data now also includes warning/critical
	  thresholds
	New check_snmp -N option to specify SNMPv3 context name
	Let check_smtp's -D option imply -S
	Let check_smtp's -e option match against the full SMTP response
	check_dig: expected response is now case-insensitive
	New check_mailq -s option which tells the plugin to use sudo(8)
	New check_nt -l parameters: seconds|minutes|hours|days
	New -W/-C option for check_ldap to check number of entries
	check_users: add support for range thresholds
	check_fping now auto-detects IPv6 addresses
	check_radius now supports the radcli library
	Support OpenSSL 1.1

	FIXES
	check_http: fix host header port handling
	Let check_real terminate lines with CRLF when talking to the server, as
	  mandated by RFC 2326
	Fix check_procs on HP-UX
	check_smtp's -e/--expect option can now be combined with -S/--starttls
	Fix incorrect performance data thresholds emitted by check_ups
	Don't let check_procs miss some processes on busy Solaris systems

	WARNINGS
	The format of the performance data emitted by check_mrtgtraf has been
	  changed to comply with the development guidelines
	check_ssh now returns CRITICAL for protocol/version errors
	If a plugin is invoked with -h/--help or -V/--version, the exit status
	  is now UNKNOWN